--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,8 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0"
+  },
+  "devDependencies": {
+    "angular-cookies": "~1.3.15"
   }
 }
