--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
+    "chalk": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-connect": "^2.2.0",
@@ -18,7 +19,8 @@
     "karma": "~0.10",
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^1.1.1",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "vinyl-fs": "^1.0.0"
   },
   "scripts": {
     "postinstall": "bower install",
