--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
   },
   "dependencies": {
     "angular": "^1.3.15",
+    "angular-bootstrap": "^0.12.2",
+    "angular-bootstrap-npm": "^0.14.3",
     "angular-cookies": "^1.3.15",
     "angular-route": "^1.3.15",
+    "angular-ui-bootstrap": "^1.1.2",
     "angularfire": "^1.1.1"
   }
 }
